--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-intl": "^3.26.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.2",
